Fix a dark mode style inconsistency

--- a/src/components/stage-header/stage-header.css
+++ b/src/components/stage-header/stage-header.css
@@ -107,9 +107,9 @@
 .stage-button-toggled-off {
     filter: saturate(0);
 }
-[theme="dark"] .stage-button-toggled-off img {
-    filter: brightness(0) invert(1) opacity(0.7);
-}
+[theme="dark"] .stage-button-toggled-off img,
+/* for the fullscreen button */
 [theme="dark"] .stage-button:not(.stage-button-first):not(.stage-button-last) img {
-    filter: brightness(0) invert(1) opacity(0.8);
+    filter: brightness(0) invert(1);
+    opacity: 0.8;
 }
